--- a/lab3/part1/janedoe.css
+++ b/lab3/part1/janedoe.css
@@ -17,12 +17,11 @@ body {
     color: #999999;
     font-weight: bold;
   }
-  
-  a:link,
-  a:visited {
+
+  h2 + ul{
     background-color: #eeeeee;
     border: 5px solid purple;
-    color: #fb6542;
+    padding: 2rem;
   }
   
   a:hover {
