--- a/lab3/part1/janedoe.css
+++ b/lab3/part1/janedoe.css
@@ -15,6 +15,7 @@ body {
   h2 + ul {
   background-color: #eeeeee;
   border: 5px solid purple;
+  padding: 2rem;
   }
 
   .job-title {
@@ -29,4 +30,5 @@ body {
   
   a:hover {
     text-decoration: none;
+    color: green;
   }
