--- a/lab3/part1/janedoe.css
+++ b/lab3/part1/janedoe.css
@@ -11,7 +11,9 @@ body {
   
   h2 {
     font-size: 1.5em;
+    font-style: italic;
   }
+
   h2 + ul {
   background-color: #eeeeee;
   border: 5px solid purple;
