--- a/lab3/part2/box.css
+++ b/lab3/part2/box.css
@@ -1,8 +1,10 @@
 html {
     font-family: sans-serif;
+    color: white;
   }
   
   div {
 width: 200px;
+height: 500px;
 background-color: red;
   }
