--- a/lab3/part2/box.css
+++ b/lab3/part2/box.css
@@ -1,11 +1,13 @@
 html {
     font-family: sans-serif;
-    color: white;
+    
   }
   
   div {
+display: flex;
 width: 200px;
 height: 500px;
 background-color: red;
 border: 1px solid black;
+border-radius: 20px;
   }
