--- a/webAC/style.css
+++ b/webAC/style.css
@@ -52,7 +52,7 @@ p, li, table {
 /* || header layout */
 
 div[class="nav"], article, footer, .secondary {
-  background-color: grey;
+  background-color: darkgray;
 }
 
 article, footer, .secondary {
