--- a/webAC/style.css
+++ b/webAC/style.css
@@ -38,6 +38,7 @@ font[size="7"] {
 font[size="6"] {
   font-size: 3rem;
   text-align: center;
+  text-shadow: 2px 2px 10px black;
   color: grey;
 }
 
