--- a/webAC/style.css
+++ b/webAC/style.css
@@ -53,7 +53,7 @@ p, li, table {
 /* || header layout */
 
 div[class="nav"], article, footer, .secondary {
-  background-color: white;
+  background-color: blue;
 }
 
 article, footer, .secondary {
